--- a/Codea2/app/src/main/AndroidManifest.xml
+++ b/Codea2/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Preguntas"></activity>
+        <activity android:name=".Puntajes"></activity>
+        <activity android:name=".Preguntas" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
