--- a/Codea2/app/src/main/AndroidManifest.xml
+++ b/Codea2/app/src/main/AndroidManifest.xml
@@ -9,7 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Puntajes"></activity>
+        <activity android:name=".Desarrolladores"></activity>
+        <activity
+            android:name=".Act02"
+            android:label="@string/title_activity_act02"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".Puntajes" />
         <activity android:name=".Preguntas" />
         <activity android:name=".MainActivity">
             <intent-filter>
