--- a/Codea2/app/src/main/AndroidManifest.xml
+++ b/Codea2/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".singup_activity"/>
+        <activity android:name=".EditarPregunta"></activity>
+        <activity android:name=".singup_activity" />
         <activity android:name=".singin_activity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -34,7 +35,7 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".Puntajes" />
         <activity android:name=".Preguntas" />
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
